# bt_nodes

./: .gitignore  README.md
attention/: CMakeLists.txt  package.xml  thirdparty.repos
attention/bt_xml/: attend.xml
attention/config/: attention.yaml
attention/include/attention/: activate_attention.hpp  deactivate_attention.hpp
attention/launch/: attention.launch.py
attention/src/: main_attention.cpp
attention/src/attention/: activate_attention.cpp  deactivate_attention.cpp
hri/: CMakeLists.txt  package.xml  thirdparty.repos
hri/config/: hri.yaml
hri/include/hri/dialog/: DialogConfirmation.hpp
hri/launch/: hri.launch.py  hri_dependencies.launch.py
hri/src/hri/: main_hri.cpp
hri/src/hri/dialog/: DialogConfirmation.cpp  Listen.cpp  Query.cpp  Speak.cpp  query.cpp  speak.cpp
motion/: CMakeLists.txt  README.md  package.xml  thirdparty.repos
motion/bt_xml/: face.xml  face_spin.xml  moveto.xml  nav.xml  nav_through.xml  nav_truncate.xml  simple_nav.xml  spin.xml  spin_time.xml
motion/config/: motion.yaml  nav.yaml
motion/include/ctrl_support/: BTActionNode.hpp
motion/include/motion/base/: Rotate.hpp  Spin.hpp  face.hpp  spin.hpp
motion/include/motion/navigation/: NavigateThrough.hpp  NavigateTo.hpp  navigate_to.hpp
motion/launch/: motion.launch.py  nav.launch.py
motion/src/: main_motion.cpp
motion/src/motion/base/: Face.cpp  Rotate.cpp  Spin.cpp  face.cpp  spin.cpp
motion/src/motion/head/: pan.cpp
motion/src/motion/navigation/: NavigateThrough.cpp  NavigateTo.cpp  navigate_through.cpp  navigate_to.cpp
perception/: CMakeLists.txt  README.md  package.xml
perception/bt_xml/: align.xml  detect_chair.xml  detect_person.xml  detect_person2.xml  identify_person.xml  in_front.xml  indentify.xml  indentify_person.xml  is_pointing.xml
perception/config/: perception.yaml
perception/include/perception/: FilterEntity.hpp  GetAngle.hpp  Identify.hpp  IdentifyPerson.hpp  IsDetected.hpp  IsInFront.hpp  IsPointing.hpp  filter_entity.hpp  get_detection_from_bb.hpp  get_detection_from_tf.hpp  identify.hpp  is_detected.hpp  is_in_front.hpp  is_in_view.hpp  is_pointing.hpp  save_detection_in_bb.hpp
perception/launch/: perception.launch.py
perception/src/: main_perception.cpp
perception/src/perception/: FilterEntity.cpp  GetAngle.cpp  Identify.cpp  IdentifyPerson.cpp  IsDetected.cpp  IsInFront.cpp  IsPointing.cpp  filter_entity.cpp  get_angle.cpp  get_detection_from_bb.cpp  get_detection_from_tf.cpp  identify.cpp  is_detected.cpp  is_in_front.cpp  is_in_view.cpp  is_pointing.cpp  save_detection_in_bb.cpp
